change footer,  cursor effect, minor fixes spacing

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,4 +1,5 @@
 @use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
 
 .footer {
   position: relative;
@@ -14,7 +15,10 @@
 
   .social-links {
     justify-content: center;
-    gap: calc($spacing-unit * 1.5);
+    gap: $spacing-unit;
+    a {
+      @include bodyCopySmall;
+    }
   }
 }
 
