--- a/src/components/SocialIcon/SocialIcon.scss
+++ b/src/components/SocialIcon/SocialIcon.scss
@@ -19,6 +19,5 @@
 a.social-icon {
   &:hover {
     transform: scale(1.1);
-    color: $color-hover;
   }
 }
